<resources>
    <string name="app_name">Descúbrelo</string>
    <string name="home_title">Inicio</string>
    <string name="home_add">Agregar</string>
    <string name="home_profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Bienvenido</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="bye_message">Hasta pronto</string>
    <string name="error_sign_out">Error al cerrar sesión.</string>
    <string name="no_red">Sin Conexión</string>
    <string name="text_spinner">Cargando…</string>
    <string name="content_description_add">Botón para agregar una recomendación.</string>
    <string name="content_description_home">Botón para situarte en la pantalla principal.</string>
    <string name="content_description_profile">Botón para acceder a tu perfil.</string>
    <string name="home_settings">Ajustes</string>
    <string name="home_favorite">Favoritos</string>
    <string name="content_description_favorite">Botón para acceder a tus favoritos.</string>
    <string name="text_btn_turismo">Turismo</string>
    <string name="text_btn_aventura">Aventura</string>
    <string name="text_btn_fiesta">Fiesta</string>
    <string name="text_btn_dormir">Dormir</string>
    <string name="text_btn_comer">Comer</string>
    <string name="title_weekend_card">Ideas para el fin de semana</string>
    <string name="title_add">¿Qué tipo de sujerencia quieres agregar?</string>
    <string name="title_home_fragment">¿Qué te apetece hacer?</string>
    <string name="title_SuggestionsUsers_card">Últimas sugerencias de usuarios</string>
    <!--  Arrays-Spinner  -->

    <string name="connectivity_error">Connectivity Error</string>
    <string name="server_error">Server Error: </string>
    <string name="unknown_error">Unknown Error</string>
    <string name="sin_datos">Sin Datos</string>
    <!--  Arrays-Spinner  -->
    <string-array name="sujerencias_comer">
        <item>Tipo de Local</item>
        <item>Restaurante</item>
        <item>Tapear</item>
        <item>Comida Rápida</item>
    </string-array>
    <string-array name="sujerencias_dormir">
        <item>Tipo de Local</item>
        <item>Hotel</item>
        <item>Motel</item>
        <item>Hostal</item>
        <item>Camping</item>
    </string-array>
    <string-array name="sujerencias_fiesta">
        <item>Tipo de Local</item>
        <item>Discoteca</item>
        <item>Karaoke</item>
        <item>Pub</item>
    </string-array>
    <string-array name="sujerencias_turismo">
        <item>Tipo</item>
        <item>Monumento</item>
        <item>Teatro</item>
        <item>Musical</item>
    </string-array>
    <string-array name="sujerencias_aventura">
        <item>Tipo</item>
        <item>Ruta</item>
        <item>Esquiar</item>
        <item>Escalada</item>
        <item>Puenting</item>
    </string-array>
    <string-array name="sujerencias_vacia">
        <item>No hay opciones</item>
    </string-array>
</resources>