<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home_dest"
        android:icon="@drawable/ic_home"
        android:title="@string/home_title"
        android:contentDescription="@string/content_description_home"/>

    <item android:id="@+id/favorite_dest"
        android:icon="@drawable/ic_favorite"
        android:title="@string/home_favorite"
        android:contentDescription="@string/content_description_favorite"/>

    <item
        android:id="@+id/add_dest"
        android:title="" />

    <item android:id="@+id/profile_dest"
        android:icon="@drawable/ic_person"
        android:title="@string/home_profile"
        android:contentDescription="@string/content_description_profile"/>

    <item android:id="@+id/settings_dest"
        android:icon="@drawable/ic_settings"
        android:title="@string/home_settings"
        android:contentDescription="@string/content_description_profile"/>

</menu>